I created a form in my html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="largest">
+        <div id="container-1"> 
+            <div class="big-div">
+                <div class="signUp">
+                    <img class="img" src="Preview.avif" alt=""><br><br>
+                    <button id="signUp">Sign up</button>
+                    <button id="logIn" onclick="showIn()">Log in</button><br><br>
+                    <input placeholder="Email" type="email"><br><br>
+                    <input placeholder="Username" type="text"><br><br>
+                    <input placeholder="password" type="password">
+                </div>
+            </div>
+        </div>
+    
+        <div id="container-2"> 
+            <div class="big-div">
+                <div class="signUp">
+                    <img class="img" src="Preview.avif" alt=""><br><br>
+                    <button id="signUp" onclick="showUp()">Sign up</button>
+                    <button id="logIn">Log in</button><br><br>
+                    <input placeholder="Username" type="text"><br><br>
+                    <input placeholder="password" type="password">
+                </div>
+            </div>
+        </div>
+   </div>
+
+   
     <script src="script.js"></script>
 </body>
 </html>
