I added a submit button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     <button id="logIn" onclick="showIn()">Log in</button><br><br>
                     <input placeholder="Email" type="email"><br><br>
                     <input placeholder="Username" type="text"><br><br>
-                    <input placeholder="password" type="password">
+                    <input placeholder="password" type="password"><br><br>
+                    <button id="submitBtn">Submit</button>
                 </div>
             </div>
         </div>
