I created a local storage function for the data

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                     <img class="img" src="Preview.avif" alt=""><br><br>
                     <button id="signUp">Sign up</button>
                     <button id="logIn" onclick="showIn()">Log in</button><br><br>
-                    <input placeholder="Email" type="email"><br><br>
-                    <input placeholder="Username" type="text"><br><br>
-                    <input placeholder="password" type="password"><br><br>
-                    <button id="submitBtn">Submit</button>
+                    <input id="email" placeholder="Email" type="email"><br><br>
+                    <input id="username" placeholder="Username" type="text"><br><br>
+                    <input id="password" placeholder="password" type="password"><br><br>
+                    <button onclick="submit()" id="submitBtn">Submit</button>
                 </div>
             </div>
         </div>
@@ -29,8 +29,8 @@
                     <img class="img" src="Preview.avif" alt=""><br><br>
                     <button id="signUp" onclick="showUp()">Sign up</button>
                     <button id="logIn">Log in</button><br><br>
-                    <input placeholder="Username" type="text"><br><br>
-                    <input placeholder="password" type="password">
+                    <input id="username" placeholder="Username" type="text"><br><br>
+                    <input id="password" placeholder="password" type="password">
                 </div>
             </div>
         </div>
