I added a loader gif to the form

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             </div>
         </div>
    </div>
-
+   <div id="loader">
+        <img class="gif" src="loading.gif" alt="">
+    </div>
    
     <script src="script.js"></script>
 </body>
