I added a JSON function for the local storage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="signUp">
                     <img class="img" src="Preview.avif" alt=""><br><br>
                     <button id="signUp">Sign up</button>
-                    <button id="logIn" onclick="showIn()">Log in</button><br><br>
+                    <button id="logIn" onclick="submit()">Log in</button><br><br>
                     <input id="email" placeholder="Email" type="email"><br><br>
                     <input id="username" placeholder="Username" type="text"><br><br>
                     <input id="password" placeholder="password" type="password"><br><br>
