--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 </div>
             </div>
         </div>
+        <div id="signup-msg"></div>
+
+        <div id="loader1">
+            <img class="gif" src="loading.gif" alt="">
+        </div>
     
         <div id="container-2"> 
             <div class="big-div">
