I updated functionality of the login page

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <img class="img" src="Preview.avif" alt=""><br><br>
                     <button id="signUp" onclick="showUp()">Sign up</button>
                     <button id="logIn">Log in</button><br><br>
-                    <input id="username" placeholder="Username" type="text"><br><br>
-                    <input id="password" placeholder="password" type="password">
+                    <input id="userLogin" placeholder="Username" type="text"><br><br>
+                    <input id="passLogin" placeholder="password" type="password">
                 </div>
             </div>
         </div>
