I completed the transitioning from login page to the dashboard

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="big-div">
                 <div class="signUp">
                     <img class="img" src="Preview.avif" alt=""><br><br>
-                    <button id="signUp" onclick="showUp()">Sign up</button>
-                    <button id="logIn">Log in</button><br><br>
+                    <button id="signUp" >Sign up</button>
+                    <button type="submit" id="logIn" onclick="showUp()">Log in</button><br><br>
                     <input id="userLogin" placeholder="Username" type="text"><br><br>
                     <input id="passLogin" placeholder="password" type="password">
                 </div>
