I add a new signin folder

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                             <img class="img" src="Preview.avif" alt=""><br><br>
                             <button id="signUp">Sign up</button>
                             <button id="logIn" onclick="logIn()">Log in</button><br><br>
-                            <input id="email" placeholder="Email" type="email" required><br><br>
-                            <input id="username" placeholder="Username" type="text" required><br><br>
+                            <input id="email" placeholder="Email" type="email"><br><br>
+                            <input id="username" placeholder="Username" type="text"><br><br>
                             <input id="password" placeholder="password" type="password"><br><br>
                             <button onclick="submit()" id="submitBtn">Submit</button>
                         </div>
