I separated the signup and login pages

--- a/index.html
+++ b/index.html
@@ -16,29 +16,16 @@
                         <div class="signUp">
                             <img class="img" src="Preview.avif" alt=""><br><br>
                             <button id="signUp">Sign up</button>
-                            <button id="logIn" onclick="logIn()">Log in</button><br><br>
+                            <button id="logIn" onclick="logInPage()">Log in</button><br><br>
                             <input id="email" placeholder="Email" type="email"><br><br>
                             <input id="username" placeholder="Username" type="text"><br><br>
                             <input id="password" placeholder="password" type="password"><br><br>
-                            <button onclick="submit()" id="submitBtn">Submit</button>
+                            <button onclick="submit(event)" id="submitBtn">Submit</button>
                         </div>
                     </div>
                 </div>
                 <div id="signup-msg"></div>
-        
-            
-                <div id="container-2"> 
-                    <div class="big-div">
-                        <div class="signUp">
-                            <img class="img" src="Preview.avif" alt=""><br><br>
-                            <button id="signUp" onclick="signUp()">Sign up</button>
-                            <button type="submit" id="logIn" onclick="showUp()">Log in</button><br><br>
-                            <input id="userLogin" placeholder="Username" type="text"><br><br>
-                            <input id="passLogin" placeholder="password" type="password">
-                        </div>
-                    </div>
-                </div>
-           </div>
+            </div>
            <div id="loader">
                 <img class="gif" src="loading.gif" alt="">
             </div>
