--- a/signIn/signin.html
+++ b/signIn/signin.html
@@ -13,7 +13,7 @@
                 <div class="big-div">
                     <div class="signUp">
                         <img class="img" src="Preview.avif" alt=""><br><br>
-                        <button id="signUp" onclick="signUp()">Sign up</button>
+                        <button id="signUp" onclick="signUpPage()">Sign up</button>
                         <button type="submit" id="logIn" onclick="logIn(event)">Log in</button><br><br>
                         <input id="userLogin" placeholder="Username" type="text"><br><br>
                         <input id="passLogin" placeholder="password" type="password">
