I fixed the functionality of the signup page

--- a/signin.html
+++ b/signin.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignIn</title>
+    <link rel="stylesheet" href="signin.css">
 </head>
 <body>
     <main>
-        <form action="">
+        <!-- <form action=""> -->
             <div id="container-2"> 
                 <div class="big-div">
                     <div class="signUp">
@@ -23,7 +24,7 @@
             <div id="loader">
                 <img class="gif" src="loading.gif" alt="">
             </div>
-        </form>
+        <!-- </form> -->
     </main>
 
     <script src="signin.js"></script>
