--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <form action="">
+        <!-- <form action=""> -->
             <div class="largest">
                 <div id="container-1"> 
                     <div class="big-div">
@@ -20,7 +20,7 @@
                             <input id="email" placeholder="Email" type="email"><br><br>
                             <input id="username" placeholder="Username" type="text"><br><br>
                             <input id="password" placeholder="password" type="password"><br><br>
-                            <button onclick="submit(event)" id="submitBtn">Submit</button>
+                            <button onclick="submit()" id="submitBtn">Submit</button>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
            <div id="loader">
                 <img class="gif" src="loading.gif" alt="">
             </div>
-        </form>
+        <!-- </form> -->
     </main>
    
     <script src="script.js"></script>
