I started writing the logIn function

--- a/signin.html
+++ b/signin.html
@@ -15,7 +15,7 @@
                     <div class="signUp">
                         <img class="img" src="Preview.avif" alt=""><br><br>
                         <button id="signUp" onclick="signUpPage()">Sign up</button>
-                        <button type="submit" id="logIn" onclick="logIn(event)">Log in</button><br><br>
+                        <button type="submit" id="logIn" onclick="logIn()">Log in</button><br><br>
                         <input id="userLogin" placeholder="Username" type="text"><br><br>
                         <input id="passLogin" placeholder="password" type="password">
                     </div>
